--- a/docs/GuoX_2019.rst
+++ b/docs/GuoX_2019.rst
@@ -37,4 +37,4 @@ To start the pipeline, run the following command:
 
 The resulting loom file is available at `guox_2019_bbknn_scenic.loom`_, and is ready to be explored in `SCope <http://scope.aertslab.org/>`_.
 
-.. _`guox_2019_bbknn_scenic.loom`: https://cloud.aertslab.org/index.php/s/NbbQ9qgDMDs6t7s
+.. _`guox_2019_bbknn_scenic.loom`: https://cloud.aertslab.org/index.php/s/J4baEP7Mgomggfb
