--- a/docs/JiT_2019.rst
+++ b/docs/JiT_2019.rst
@@ -37,5 +37,5 @@ To start the pipeline, run the following command:
 
 The resulting loom file is available at `jit_2019_bbknn_scenic.loom`_, and is ready to be explored in `SCope <http://scope.aertslab.org/>`_.
 
-.. _`jit_2019_bbknn_scenic.loom`: https://cloud.aertslab.org/index.php/s/aNYEtL9wDr8pybS
+.. _`jit_2019_bbknn_scenic.loom`: https://cloud.aertslab.org/index.php/s/DHdDLnLQZCFHtya
 
