Add Harmony analysis to Ji, T., et al., 2019 case study

--- a/docs/JiT_2019.rst
+++ b/docs/JiT_2019.rst
@@ -15,7 +15,7 @@ BBKNN and SCENIC
 The following command was used to generate the config:
 
 .. code:: bash
-    nextflow pull vib-singlecell-nf/vsn-pipelines -r v0.14.2
+    nextflow pull vib-singlecell-nf/vsn-pipelines
     nextflow config vib-singlecell-nf/vsn-pipelines -profile \
       sra,cellranger,pcacv,bbknn,dm6,scenic,scenic_use_cistarget_motifs,scenic_use_cistarget_tracks,singularity \
       > nextflow.config
@@ -39,3 +39,29 @@ The resulting loom file is available at `jit_2019_bbknn_scenic.loom`_, and is re
 
 .. _`jit_2019_bbknn_scenic.loom`: https://cloud.aertslab.org/index.php/s/DHdDLnLQZCFHtya
 
+Harmony and SCENIC (append mode)
+++++++++++++++++++++++++++++++++
+
+.. code:: bash
+
+    nextflow config \
+        vib-singlecell-nf/vsn-pipelines \
+        -profile tenx,pcacv,harmony,scenic_append_only,singularity \
+        > nextflow.config
+
+The generated config is available at the ``vsn-pipelines`` GitHub repository: `jit_2019/10x_harmony_scenic_append_only.config`_. You should update The lines commented with "TO EDIT" with the correct information.
+
+.. _`jit_2019/10x_harmony_scenic_append_only.config`: https://github.com/vib-singlecell-nf/vsn-pipelines-examples/blob/master/jit_2019/10x_harmony_scenic_append_only.config
+
+To start the pipeline, run the following command:
+
+.. code:: bash
+
+    nextflow \
+        -C nextflow.config \
+        run vib-singlecell-nf/vsn-pipelines \
+            -entry harmony_scenic -resume
+
+The resulting loom file is available at `jit_2019/harmony_scenic_append_only`_ and is ready to be explored in `SCope <http://scope.aertslab.org/>`_.
+
+.. _`jit_2019/harmony_scenic_append_only`: https://cloud.aertslab.org/index.php/s/MD96acs4oAa5wPC
